--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dmstr/yii2-adminlte-asset",
+    "name": "phuongitvn/yii2adminlte",
     "description": "AdminLTE backend theme asset bundle for Yii 2.0 Framework",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","adminlte","admin","theme","backend","asset","css","less"],
@@ -17,7 +17,7 @@
     "require": {
         "yiisoft/yii2": "2.*",
         "yiisoft/yii2-bootstrap4": "~2.0.8",
-        "almasaeed2010/adminlte": "^3.0.2"
+        "almasaeed2010/adminlte": "^3.1"
     },
     "suggest": {
         "cebe/yii2-gravatar": "Display user icons",
