--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     ],
     "require": {
         "yiisoft/yii2": "2.*",
-        "yiisoft/yii2-bootstrap4": "dev-master",
-        "almasaeed2010/adminlte": "*"
+        "yiisoft/yii2-bootstrap4": "~2.0.8",
+        "almasaeed2010/adminlte": "^3.0.5"
     },
     "suggest": {
         "cebe/yii2-gravatar": "Display user icons",
